basic todo website code for beginner
web d beginner can refer this code to learn many things:)

--- a/Web Development/Rock_Paper_Scissor/index.html
+++ b/Web Development/Rock_Paper_Scissor/index.html
@@ -13,7 +13,7 @@
 
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</Paper>
-        <!--asdf-->
+        <!--asdff-->
     <button id="Scissors">Scissors</Scissors>
 
     <script src="app.js" charset="utf-8" ></script>
